# avataa-documents

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  pytest.ini  supervisord.conf
app/: database.py  file_server.py  init_app.py  main.py  run_grpc.py  run_kafka.py  settings.py
app/grpc_config/: getter_example.py  grpc_server.py
app/kafka/: kafka_document_pb2.py  kafka_document_pb2.pyi
app/routers/: content_router.py  document_router.py  document_specification_router.py  hub_router.py  listener_router.py
app/schemas/: association_specification_ref.py  attachment_ref_or_value.py  category_ref.py  characteristic.py  characteristic_relationship.py  characteristic_specification.py  characteristic_specification_relationship.py  characteristic_value_specification.py  constraint_ref.py  document.py  document_ref.py  document_specification.py  document_specification_ref_or_value.py  document_specification_status_type.py  document_status_type.py  entity_specification_relationship.py  event.py  exception.py  external_identifier.py  field_description.json  hub.py  load_field_description.py  quantity.py  range_interval.py  related_entity.py  related_party.py  target_entity_schema.py  time_period.py
app/security/: security_config.py  security_factory.py  security_utils.py
app/tasks/: create_document_with_attachments.py  find_document_by_id_and_attachment_name.py  remove_object_version.py  upload_attachment.py
app/utils/: content_to_server.py  document_utils.py  exception_formatter.py  formatter.py  kafka.py  merge_json.py  parser.py
docs/source/: conf.py  endpoints.rst  index.rst  (+2 more)
tests/: Readme.md  conftest.py
(+14 files in other folders)
