[project]
name = "documents"
version = "3.0.13"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.14",
    "autodoc-pydantic~=1.8.0",
    "cachetools==5.5.0",
    "confluent-kafka==2.3.0",
    "fastapi==0.118.0",
    "grpcio==1.53.2",
    "minio~=7.1.9",
    "motor==3.1.1",
    "protobuf==5.29.5",
    "pydantic==1.10.24",
    "pyjwt[crypto]==2.6.0",
    "pymongo==4.6.3",
    "python-dateutil~=2.8.2",
    "python-multipart==0.0.20",
    "sphinx~=6.1.3",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
]
lint = [
    "ruff==0.13.2",
]
tests = [
    "pytest~=7.2.2",
    "httpx==0.28.1",
    "requests==2.32.4",
]
security = [
    "pip-audit==2.9.0",
]
migrations = [
]
